	exmpp_xml:document_fragment_to_list/3 was renamed.

	* src/core/exmpp_iq.erl (error/2, error_without_original/2): Fix
	copy&paste error: use exmpp_stanza:error/2, not exmpp_iq:error/2 to
	build the <error/> element.

	* src/core/exmpp_stanza.erl (set_type/2, set_type_in_attrs/2): Accept
	an atom() as Type. It's more consistent with exmpp_iq:get_type/1 &
	friends return values.

2008-06-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* testsuite/test.sh: erl(1) is called with the +B flags so that ^C
	interrupts the process immediately. To terminate the Erlang process,
	we use halt() instead of init:stop(); this is a lot faster and
	acceptable for a testsuite. Add a new 'FAIL' case for $exit_code.

	* testsuite/testsuite.erl: Test modules now use the new
	testsuite:run/1 function. It handles more cleanly the failed tests by
	pretty printing a stack trace and the exception.

	* testsuite/check_xml_attribute_handlers.erl,
	testsuite/check_coverity.erl, testsuite/check_jid.erl,
	testsuite/check_xml_converters.erl, testsuite/check_xmlstream.erl,
	testsuite/check_xml_path.erl, testsuite/check_xml_parser.erl,
	testsuite/check_xml_cdata_handlers.erl,
	testsuite/check_legacy_auth.erl,
	testsuite/check_xml_element_handlers.erl, testsuite/check_stream.erl:
	Use the new testsuite:run/1 function.

	* TODO: Refreshed (but not exhaustive).

	* doc/overview.edoc: Add TODO to the overview.

	* src/core/exmpp_xml.erl: Add functions has_element_by_name/{2,3} and
	has_element_by_ns/2. Fix documentation.

	* TODO, doc/overview.edoc: Update TODO.

	* src/core/exmpp_xml.erl: Rename document_fragment_to_list/3 to
	node_to_list/3 because the first argument is either an XML element or
	an XML text node.

	* src/core/exmpp_stanza.erl: Use the new node_to_list/3.

	* src/core/exmpp_jid.erl: Add a function make_bare_jid/1 to make a JID
	with just a domain. Remove the Ejabberd compat functions; they are
	moved to Ejabberd itself.
